# fs-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  LICENSE  package.toml
crates/fs-ai/: Cargo.toml
crates/fs-ai/src/: app.rs  lib.rs
crates/fs-app/: Cargo.toml
crates/fs-app/src/: main.rs
crates/fs-bots/: Cargo.toml
crates/fs-bots/assets/i18n/: de.toml  en.toml
crates/fs-bots/src/: accounts_view.rs  app.rs  bot_strategy.rs  broadcast_view.rs  components.rs  context.rs  gatekeeper_view.rs  groups_view.rs  lib.rs  model.rs  view_trait.rs
crates/fs-browser/: Cargo.toml
crates/fs-browser/assets/i18n/: de.toml  en.toml
crates/fs-browser/src/: app.rs  bookmarks.rs  lib.rs  main.rs
crates/fs-builder/: Cargo.toml
crates/fs-builder/assets/i18n/: de.toml  en.toml
crates/fs-builder/src/: app.rs  bridge_builder.rs  container_builder.rs  i18n_editor.rs  lib.rs  main.rs  resource_browser.rs
crates/fs-container-app/: Cargo.toml
crates/fs-container-app/assets/i18n/: de.toml  en.toml
crates/fs-container-app/src/: app.rs  build_view.rs  instance_config.rs  lib.rs  log_viewer.rs  main.rs  service_detail.rs  service_list.rs
crates/fs-db-desktop/: Cargo.toml
crates/fs-db-desktop/migrations/desktop/: 001_initial.sql
crates/fs-db-desktop/migrations/shared/: 001_initial.sql
crates/fs-db-desktop/src/: container_db.rs  desktop.rs  lib.rs  migration.rs  package_registry.rs  shared.rs  store_db.rs
crates/fs-db-desktop/src/entities/: active_theme.rs  audit.rs  mod.rs  setting.rs  shortcut.rs  widget_slot.rs
crates/fs-db-desktop/src/schemas/: browser.rs  bus.rs  container.rs  core.rs  lenses.rs  mod.rs  store.rs
crates/fs-lenses/: Cargo.toml
crates/fs-lenses/src/: app.rs  lib.rs  main.rs  model.rs  query.rs
crates/fs-managers/: Cargo.toml
crates/fs-managers/assets/i18n/: de.toml  en.toml
crates/fs-managers/src/: app.rs  bots_panel.rs  container_panel.rs  cursor_panel.rs  icons_panel.rs  language_panel.rs  lib.rs  main.rs  manager_view.rs  theme_panel.rs  view_model.rs
crates/fs-profile/: Cargo.toml
crates/fs-profile/src/: app.rs  lib.rs  main.rs
crates/fs-settings/: Cargo.toml
crates/fs-settings/assets/i18n/: de.toml  en.toml
crates/fs-settings/src/: accounts.rs  app.rs  appearance.rs  browser_settings.rs  desktop_settings.rs  language.rs  layout_settings.rs  lib.rs  main.rs  package_settings.rs  service_roles.rs  settings_config_component.rs  shortcuts.rs  translation_editor.rs
crates/fs-shell/: Cargo.toml
crates/fs-shell/assets/i18n/: de.toml  en.toml
crates/fs-shell/src/: ai_view.rs  app_shell.rs  builtin_apps.rs  db.rs  desktop.rs  header.rs  help_view.rs  icons.rs  launcher.rs  lib.rs  main.rs  multiwindow.rs  notification.rs  sidebar.rs  spinner.rs  system_info.rs  taskbar.rs  theme_loader.rs  web_desktop.rs  widgets.rs  window.rs  window_frame.rs
crates/fs-shell/tests/: snapshots.rs
crates/fs-showcase/: Cargo.toml
crates/fs-showcase/src/: main.rs
crates/fs-store-app/: Cargo.toml
crates/fs-store-app/assets/i18n/: de.toml  en.toml
crates/fs-store-app/src/: app.rs  browser.rs  install_wizard.rs  installed_list.rs  lib.rs  main.rs  missing_icon.rs  node_package.rs  package_card.rs  package_detail.rs  state.rs  store_settings.rs
crates/fs-theme-app/: Cargo.toml
crates/fs-theme-app/assets/i18n/: de.toml
crates/fs-theme-app/src/: app.rs  chrome_view.rs  colors_view.rs  cursor_view.rs  lib.rs  main.rs  themes_view.rs
crates/fsd-ai/: Cargo.toml
crates/fsd-ai/assets/i18n/: de.toml  en.toml
crates/fsd-ai/src/: app.rs  lib.rs
crates/fsd-app/: Cargo.toml
crates/fsd-app/src/: main.rs
crates/fsd-bots/: Cargo.toml
crates/fsd-bots/assets/i18n/: am.toml  ar.toml  be.toml  de.toml  en.toml
crates/fsd-bots/src/: accounts_view.rs  app.rs  groups_view.rs  lib.rs  model.rs
crates/fsd-browser/: Cargo.toml
crates/fsd-browser/assets/i18n/: de.toml  en.toml
crates/fsd-browser/src/: app.rs  bookmarks.rs  history.rs  lib.rs  main.rs  model.rs
crates/fsd-builder/: Cargo.toml
crates/fsd-builder/assets/i18n/: de.toml  en.toml
crates/fsd-builder/src/: app.rs  bridge_builder.rs  container_builder.rs  lib.rs
crates/fsd-conductor/: Cargo.toml
crates/fsd-conductor/assets/i18n/: de.toml  en.toml
crates/fsd-conductor/src/: app.rs  bot_management.rs  build_view.rs  dep_graph.rs  lib.rs  log_viewer.rs  main.rs  resource_editor.rs  resource_view.rs  service_detail.rs  service_list.rs
crates/fsd-conductor/src/bot_management/: bot_row.rs  form.rs  mod.rs  model.rs
crates/fsd-container/: Cargo.toml
crates/fsd-container/assets/i18n/: de.toml  en.toml
crates/fsd-container/src/: app.rs  instance_config.rs  lib.rs  log_viewer.rs  main.rs  service_list.rs
crates/fsd-lenses/: Cargo.toml
crates/fsd-lenses/assets/i18n/: de.toml  en.toml
crates/fsd-lenses/src/: app.rs  lib.rs  main.rs  model.rs  query.rs
crates/fsd-managers/: Cargo.toml
crates/fsd-managers/assets/i18n/: de.toml  en.toml
crates/fsd-managers/src/: app.rs  container_panel.rs  icons_panel.rs  language_panel.rs  lib.rs
crates/fsd-profile/: Cargo.toml
crates/fsd-profile/src/: app.rs  main.rs
crates/fsd-settings/: Cargo.toml
crates/fsd-settings/assets/i18n/: de.toml  en.toml
crates/fsd-settings/src/: accounts.rs  app.rs  appearance.rs  desktop_settings.rs  language.rs  lib.rs  main.rs  service_roles.rs  shortcuts.rs
crates/fsd-shell/: Cargo.toml
crates/fsd-shell/assets/i18n/: de.toml  en.toml
crates/fsd-shell/src/: ai_view.rs  app_shell.rs  builtin_apps.rs  desktop.rs  header.rs  help_view.rs  icons.rs  launcher.rs  lib.rs  main.rs  multiwindow.rs  notification.rs  sidebar.rs  spinner.rs  split_view.rs  taskbar.rs  theme_loader.rs  wallpaper.rs  web_desktop.rs  widgets.rs  window.rs  window_frame.rs
crates/fsd-shell/tests/: snapshots.rs
crates/fsd-showcase/: Cargo.toml
crates/fsd-showcase/src/: main.rs
crates/fsd-store/: Cargo.toml
crates/fsd-store/src/: app.rs  browser.rs  install_wizard.rs  installed_list.rs  lib.rs  main.rs  missing_icon.rs  node_package.rs  package_card.rs  package_detail.rs  state.rs  store_settings.rs
(+73 files in other folders)
