[workspace]
members = [
    "crates/fsd-db",
    "crates/fsd-shell",
    "crates/fsd-container",
    "crates/fsd-store",
    "crates/fsd-builder",
    "crates/fsd-settings",
    "crates/fsd-profile",
    "crates/fsd-app",
    "crates/fsd-showcase",
    "crates/fsd-bots",
    "crates/fsd-tasks",
    "crates/fsd-browser",
    "crates/fsd-lenses",
    "crates/fsd-managers",
    "crates/fsd-theme",
    "crates/fsd-ai",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
authors    = ["FreeSynergy.Net"]
repository = "https://github.com/FreeSynergy/Desktop"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]

# Internal Desktop crates
fsd-db        = { path = "crates/fsd-db" }
fsd-shell     = { path = "crates/fsd-shell", default-features = false }
fsd-container = { path = "crates/fsd-container" }
fsd-store     = { path = "crates/fsd-store" }
fsd-builder   = { path = "crates/fsd-builder" }
fsd-settings  = { path = "crates/fsd-settings" }
fsd-profile   = { path = "crates/fsd-profile" }
fsd-showcase  = { path = "crates/fsd-showcase" }
fsd-bots      = { path = "crates/fsd-bots" }
fsd-tasks     = { path = "crates/fsd-tasks" }
fsd-browser   = { path = "crates/fsd-browser" }
fsd-lenses    = { path = "crates/fsd-lenses" }
fsd-managers  = { path = "crates/fsd-managers" }
fsd-theme = { path = "crates/fsd-theme" }
fsd-ai    = { path = "crates/fsd-ai" }
fsn-manager-ai = { path = "../fs-managers/ai" }

# fs-libs — shared libraries monorepo
fsn-types          = { path = "../fs-libs/fsn-types" }
fsn-error          = { path = "../fs-libs/fsn-error" }
fsn-config         = { path = "../fs-libs/fsn-config" }
fsn-i18n           = { path = "../fs-libs/fsn-i18n" }
fsn-theme          = { path = "../fs-libs/fsn-theme" }
fsn-help           = { path = "../fs-libs/fsn-help" }
fsn-health         = { path = "../fs-libs/fsn-health" }
fsn-store          = { path = "../fs-libs/fsn-store" }
fsn-container      = { path = "../fs-libs/fsn-container" }
fsn-plugin-sdk     = { path = "../fs-libs/fsn-plugin-sdk" }
fsn-auth           = { path = "../fs-libs/fsn-auth" }
fsn-core           = { path = "../fs-libs/fsn-core" }
fsn-components     = { path = "../fs-libs/fsn-components" }
fsn-manager-language   = { path = "../fs-managers/language" }
fsn-manager-icons      = { path = "../fs-managers/icons" }
fsn-manager-cursor     = { path = "../fs-managers/cursor" }
fsn-render         = { path = "../fs-libs/fsn-render" }
fsn-db             = { path = "../fs-libs/fsn-db" }

# Database (SeaORM)
sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }

# UI — Dioxus (Desktop + Web + TUI via single codebase)
dioxus = { version = "0.6", default-features = false, features = ["macro", "html", "signals", "hooks", "launch", "mounted", "document"] }

# Serialization
serde      = { version = "1",   features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
toml       = { version = "1", features = ["preserve_order"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow    = { version = "1" }
thiserror = { version = "2" }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "blocking"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Allocator — replaces glibc allocator to avoid WebKitGTK heap-corruption on window close
mimalloc = { version = "0.1", default-features = false }

# ── Local patches ─────────────────────────────────────────────────────────────
# Remove once dioxus-desktop exposes with_navigation_handler in a published release.
# Tracking: https://github.com/DioxusLabs/dioxus/pull/5390
[patch.crates-io]
dioxus-desktop = { path = "vendor/dioxus-desktop" }
