[workspace]
members = [
    "crates/fs-db-desktop",
    "crates/fs-gui-workspace",
    "crates/fs-settings",
    "crates/fs-profile",
    "crates/fs-app",
    "crates/fs-showcase",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
authors    = ["FreeSynergy.Net"]
repository = "https://github.com/FreeSynergy/fs-desktop"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]

# Internal Desktop crates
fs-db-desktop = { path = "crates/fs-db-desktop" }
fs-gui-workspace = { path = "crates/fs-gui-workspace", default-features = false }
fs-settings   = { path = "crates/fs-settings" }
fs-profile    = { path = "crates/fs-profile" }
fs-showcase   = { path = "crates/fs-showcase" }

# fs-apps — standalone apps (embedded in shell)
fs-store-app     = { path = "../fs-apps/crates/fs-store-app" }
fs-browser       = { path = "../fs-apps/crates/fs-browser" }
fs-lenses        = { path = "../fs-apps/crates/fs-lenses" }
fs-theme-app     = { path = "../fs-apps/crates/fs-theme-app" }
fs-builder       = { path = "../fs-apps/crates/fs-builder" }
fs-tasks         = { path = "../fs-apps/crates/fs-tasks" }
fs-bots          = { path = "../fs-apps/crates/fs-bots" }
fs-ai            = { path = "../fs-apps/crates/fs-ai" }
fs-container-app = { path = "../fs-apps/crates/fs-container-app" }
fs-managers      = { path = "../fs-apps/crates/fs-managers" }

# fs-libs — shared libraries monorepo
fs-types          = { path = "../fs-libs/fs-types" }
fs-error          = { path = "../fs-libs/fs-error" }
fs-config         = { path = "../fs-libs/fs-config" }
fs-i18n           = { path = "../fs-libs/fs-i18n", features = ["dioxus"] }
fs-theme          = { path = "../fs-libs/fs-theme" }
fs-help           = { path = "../fs-libs/fs-help" }
fs-health         = { path = "../fs-libs/fs-health" }
fs-store          = { path = "../fs-libs/fs-store" }
fs-container      = { path = "../fs-libs/fs-container" }
fs-plugin-sdk     = { path = "../fs-libs/fs-plugin-sdk" }
fs-auth           = { path = "../fs-libs/fs-auth" }
fs-core           = { path = "../fs-libs/fs-core" }
fs-components     = { path = "../fs-libs/fs-components" }
fs-render         = { path = "../fs-libs/fs-render" }
fs-db             = { path = "../fs-libs/fs-db" }
fs-pkg            = { path = "../fs-libs/fs-pkg" }

# fs-managers — manager backends
fs-manager-language  = { path = "../fs-managers/language" }
fs-manager-icons     = { path = "../fs-managers/icons" }
fs-manager-cursor    = { path = "../fs-managers/cursor" }
fs-manager-theme     = { path = "../fs-managers/theme" }
fs-manager-container = { path = "../fs-managers/container" }
fs-manager-ai        = { path = "../fs-managers/ai" }

# Database (SeaORM)
sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }

# UI — Dioxus (Desktop + Web + TUI via single codebase)
dioxus = { version = "0.7.3", default-features = false, features = ["macro", "html", "signals", "hooks", "launch", "mounted", "document"] }

# Serialization
serde      = { version = "1",   features = ["derive"] }
serde_json = { version = "1" }
serde_yml  = { version = "0.0.12" }
toml       = { version = "1", features = ["preserve_order"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow    = { version = "1" }
thiserror = { version = "2" }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "blocking"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Allocator — replaces glibc allocator to avoid WebKitGTK heap-corruption on window close
mimalloc = { version = "0.1", default-features = false }

# ── Local patches ─────────────────────────────────────────────────────────────
# Remove once dioxus-desktop exposes with_navigation_handler in a published release.
# Tracking: https://github.com/DioxusLabs/dioxus/pull/5390
[patch.crates-io]
dioxus-desktop = { path = "vendor/dioxus-desktop" }
