[package]
name    = "fs-bots"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web     = ["dioxus/web"]

[dependencies]
dioxus         = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
chrono         = { workspace = true }
fs-components = { workspace = true, features = ["dioxus"] }
fs-i18n       = { workspace = true }
