[package]
name        = "fs-browser"
description = "FreeSynergy Desktop – embedded web browser with tabs, bookmarks and S3 downloads"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fs_browser"
path = "src/lib.rs"

[[bin]]
name = "fs-browser"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fs-components/desktop"]
web      = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-db-desktop = { workspace = true }
fs-components = { workspace = true }
fs-i18n       = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
chrono         = { workspace = true }
