[package]
name = "fs-db-desktop"
description = "FreeSynergy.Desktop – SeaORM storage (desktop + shared databases)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
fs-db     = { workspace = true }
sea-orm    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
