[package]
name        = "fs-lenses"
description = "FreeSynergy Desktop – Lenses: aggregated cross-service data views"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fs_lenses"
path = "src/lib.rs"

[[bin]]
name = "fs-lenses"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fs-components/desktop"]
web      = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-db-desktop = { workspace = true }
fs-components = { workspace = true }
fs-i18n       = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
chrono         = { workspace = true }
reqwest        = { workspace = true }
