[package]
name = "fs-store-app"
description = "FreeSynergy Desktop – Store: package manager (discovery, install, updates)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fs_store_app"
path = "src/lib.rs"

[[bin]]
name = "fs-store-app"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fs-components/desktop"]
web      = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-db-desktop = { workspace = true }
fs-store      = { workspace = true }
fs-components = { workspace = true }
fs-i18n       = { workspace = true }
toml           = { workspace = true }
dioxus        = { workspace = true }
serde         = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
fs-container = { workspace = true }
