[package]
name = "fs-theme-app"
description = "FreeSynergy Desktop – Theme Manager"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fs_theme_app"
path = "src/lib.rs"

[[bin]]
name = "fs-theme-app"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fs-components/desktop"]
web      = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-components = { workspace = true }
fs-i18n       = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
