[package]
name    = "fsd-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "fsd_ai"
path = "src/lib.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "fsn-components/desktop"]
web     = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsn-manager-ai = { path = "../../../FreeSynergy.Managers/ai" }
fsn-components = { workspace = true }
fsn-i18n       = { workspace = true }
dioxus         = { workspace = true }
serde_json     = { workspace = true }
