[package]
name    = "fsd-bots"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web     = ["dioxus/web"]

[dependencies]
dioxus         = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
chrono         = { workspace = true }
fsn-components = { workspace = true }
fsn-i18n       = { workspace = true }
