[package]
name        = "fsd-browser"
description = "FreeSynergy Desktop – embedded web browser with tabs, bookmarks and S3 downloads"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_browser"
path = "src/lib.rs"

[[bin]]
name = "fsd-browser"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fsn-components/desktop"]
web      = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsd-db         = { workspace = true }
fsn-components = { workspace = true }
fsn-i18n       = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
chrono         = { workspace = true }
