[package]
name        = "fsd-builder"
description = "FreeSynergy Desktop – Builder: Container builder, Bridge builder, i18n editor, resource browser"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_builder"
path = "src/lib.rs"

[[bin]]
name = "fsd-builder-ui"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fsn-components/desktop"]
web      = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsd-db         = { workspace = true }
fsn-components = { workspace = true }
fsn-store      = { workspace = true }
fsn-i18n       = { workspace = true }
fsn-types      = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
toml           = { workspace = true }
reqwest        = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
