[package]
name        = "fsd-container"
description = "FreeSynergy Desktop – Container App: container, service and bot management"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_container"
path = "src/lib.rs"

[[bin]]
name = "fsd-container"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fsn-components/desktop"]
web      = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsn-components = { workspace = true }
fsn-container  = { workspace = true }
fsn-i18n       = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
tokio          = { workspace = true }
