[package]
name        = "fsd-managers"
description = "FreeSynergy Desktop – Managers stub (split into separate programs)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "fsd_managers"
path = "src/lib.rs"

[[bin]]
name = "fsd-managers"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "fsn-components/desktop"]
web     = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsn-components = { workspace = true }
dioxus         = { workspace = true }
