[package]
name        = "fsd-profile"
description = "FreeSynergy Desktop – Profile: user profile, avatar, SSH keys"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_profile"
path = "src/lib.rs"

[[bin]]
name = "fsd-profile"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop"]
web      = ["dioxus/web"]

[dependencies]
fsn-auth   = { workspace = true }
fsn-config = { workspace = true }
fsn-error  = { workspace = true }
dioxus     = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
