[package]
name        = "fsd-shell"
description = "FreeSynergy Desktop – shell: taskbar, window manager, wallpaper"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_shell"
path = "src/lib.rs"

[[bin]]
name = "fsd-shell"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop"]
web      = ["dioxus/web"]

[dependencies]
fsd-conductor = { workspace = true }
fsd-store     = { workspace = true }
fsd-studio    = { workspace = true }
fsd-settings  = { workspace = true }
fsd-profile   = { workspace = true }
fsn-i18n      = { workspace = true }
fsn-theme     = { workspace = true }
fsn-config    = { workspace = true }
dioxus        = { workspace = true }
serde         = { workspace = true }
toml          = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
