[package]
name        = "fsd-shell"
description = "FreeSynergy Desktop – shell: taskbar, window manager, wallpaper"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_shell"
path = "src/lib.rs"

[[bin]]
name = "fsd-shell"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fsn-components/desktop"]
web      = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsd-db        = { workspace = true }
fsd-conductor = { workspace = true }
fsd-store     = { workspace = true }
fsd-studio    = { workspace = true }
fsd-settings  = { workspace = true }
fsd-profile   = { workspace = true }
fsd-bots      = { workspace = true }
fsd-tasks     = { workspace = true }
fsn-components = { workspace = true }
fsn-theme      = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
chrono         = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
insta     = { version = "1", features = ["toml"] }
fsn-theme = { workspace = true }
