[package]
name        = "fsd-shell"
description = "FreeSynergy Desktop – shell: taskbar, window manager, wallpaper"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[lib]
name = "fsd_shell"
path = "src/lib.rs"

[[bin]]
name = "fsd-shell"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fsn-components/desktop"]
web      = ["dioxus/web",     "fsn-components/web"]

[dependencies]
fsd-db        = { workspace = true }
fsd-store     = { workspace = true }
fsd-builder   = { workspace = true }
fsd-container = { workspace = true }
fsd-settings  = { workspace = true }
fsd-profile   = { workspace = true }
fsd-tasks     = { workspace = true }
fsd-browser   = { workspace = true }
fsd-lenses    = { workspace = true }
fsd-managers  = { workspace = true }
fsd-bots      = { workspace = true }
fsd-theme = { workspace = true }
fsn-components = { workspace = true }
fsn-i18n       = { workspace = true }
fsn-theme      = { workspace = true }
dioxus         = { workspace = true }
serde          = { workspace = true }
chrono         = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
insta     = { version = "1", features = ["toml"] }
fsn-theme = { workspace = true }
